Convert to using leaderboards over hardcoded ratings (#2080)