@@ -7,12 +7,13 @@ import com.faforever.client.achievements.PlayerAchievementBuilder;
 import com.faforever.client.api.dto.AchievementState;
 import com.faforever.client.domain.RatingHistoryDataPoint;
 import com.faforever.client.events.EventService;
-import com.faforever.client.fa.RatingMode;
-import com.faforever.client.game.KnownFeaturedMod;
 import com.faforever.client.i18n.I18n;
-import com.faforever.client.leaderboard.LeaderboardEntry;
+import com.faforever.client.leaderboard.Leaderboard;
+import com.faforever.client.leaderboard.LeaderboardBuilder;
+import com.faforever.client.leaderboard.LeaderboardEntryBuilder;
 import com.faforever.client.leaderboard.LeaderboardService;
 import com.faforever.client.notification.NotificationService;
+import com.faforever.client.player.Player;
 import com.faforever.client.player.PlayerBuilder;
 import com.faforever.client.player.PlayerService;
 import com.faforever.client.stats.StatisticsService;
@@ -23,29 +24,29 @@ import javafx.scene.layout.HBox;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mock;
+import org.testfx.util.WaitForAsyncUtils;
 
 import java.time.OffsetDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 public class UserInfoWindowControllerTest extends AbstractPlainJavaFxTest {
-
-  private static final String PLAYER_NAME = "junit";
-  private static final int PLAYER_ID = 123;
 
   private UserInfoWindowController instance;
 
@@ -72,16 +73,26 @@ public class UserInfoWindowControllerTest extends AbstractPlainJavaFxTest {
   @Mock
   private LeaderboardService leaderboardService;
 
+  private Leaderboard leaderboard;
+  private Player player;
+
   @Before
   public void setUp() throws Exception {
+    leaderboard = LeaderboardBuilder.create().defaultValues().get();
+    player = PlayerBuilder.create("junit").defaultValues().get();
+
     instance = new UserInfoWindowController(statisticsService, countryFlagService, achievementService, eventService,
         i18n, uiService, timeService, playerService, notificationService, leaderboardService);
 
+    when(i18n.getWithDefault(leaderboard.getTechnicalName(), leaderboard.getNameKey())).thenReturn(leaderboard.getTechnicalName());
+    when(i18n.get("leaderboard.rating", leaderboard.getTechnicalName())).thenReturn(leaderboard.getTechnicalName());
+    when(i18n.number(anyInt())).thenReturn("123");
     when(uiService.loadFxml("theme/achievement_item.fxml")).thenReturn(achievementItemController);
     when(achievementItemController.getRoot()).thenReturn(new HBox());
     when(playerService.getPlayersByIds(any())).thenReturn(CompletableFuture.completedFuture(Collections.emptyList()));
-    when(leaderboardService.getEntryForPlayer(eq(PLAYER_ID))).thenReturn(CompletableFuture.completedFuture(new LeaderboardEntry()));
-    when(statisticsService.getRatingHistory(any(), eq(PLAYER_ID))).thenReturn(CompletableFuture.completedFuture(Arrays.asList(
+    when(leaderboardService.getLeaderboards()).thenReturn(CompletableFuture.completedFuture(List.of(leaderboard)));
+    when(leaderboardService.getEntriesForPlayer(eq(player.getId()))).thenReturn(CompletableFuture.completedFuture(List.of(LeaderboardEntryBuilder.create().defaultValues().get())));
+    when(statisticsService.getRatingHistory(eq(player.getId()), any())).thenReturn(CompletableFuture.completedFuture(asList(
         new RatingHistoryDataPoint(OffsetDateTime.now(), 1500f, 50f),
         new RatingHistoryDataPoint(OffsetDateTime.now().plus(1, ChronoUnit.DAYS), 1500f, 50f)
     )));
@@ -90,66 +101,62 @@ public class UserInfoWindowControllerTest extends AbstractPlainJavaFxTest {
   }
 
   @Test
-  public void testSetPlayerInfoBeanNoAchievementUnlocked() throws Exception {
+  public void testSetPlayerInfoBeanNoAchievementUnlocked() {
     when(achievementService.getAchievementDefinitions()).thenReturn(CompletableFuture.completedFuture(singletonList(
         AchievementDefinitionBuilder.create().defaultValues().get()
     )));
     when(uiService.loadFxml("theme/achievement_item.fxml")).thenReturn(achievementItemController);
-    when(achievementService.getPlayerAchievements(PLAYER_ID)).thenReturn(CompletableFuture.completedFuture(
+    when(achievementService.getPlayerAchievements(player.getId())).thenReturn(CompletableFuture.completedFuture(
         singletonList(PlayerAchievementBuilder.create().defaultValues().get())
     ));
-    when(eventService.getPlayerEvents(PLAYER_ID)).thenReturn(CompletableFuture.completedFuture(new HashMap<>()));
+    when(eventService.getPlayerEvents(player.getId())).thenReturn(CompletableFuture.completedFuture(new HashMap<>()));
 
-    instance.setPlayer(PlayerBuilder.create(PLAYER_NAME).id(PLAYER_ID).get());
+    instance.setPlayer(player);
 
     verify(achievementService).getAchievementDefinitions();
-    verify(achievementService).getPlayerAchievements(PLAYER_ID);
-    verify(eventService).getPlayerEvents(PLAYER_ID);
+    verify(achievementService).getPlayerAchievements(player.getId());
+    verify(eventService).getPlayerEvents(player.getId());
 
-    assertThat(instance.mostRecentAchievementPane.isVisible(), is(false));
+    assertFalse(instance.mostRecentAchievementPane.isVisible());
   }
 
   @Test
   public void testGetRoot() throws Exception {
-    assertThat(instance.getRoot(), is(instance.userInfoRoot));
-    assertThat(instance.getRoot().getParent(), is(nullValue()));
+    assertEquals(instance.userInfoRoot, instance.getRoot());
+    assertNull(instance.getRoot().getParent());
   }
 
   @Test
-  public void testSetPlayerInfoBean() throws Exception {
+  public void testSetPlayerInfoBean() {
     when(achievementService.getAchievementDefinitions()).thenReturn(CompletableFuture.completedFuture(asList(
         AchievementDefinitionBuilder.create().id("foo-bar").get(),
         AchievementDefinitionBuilder.create().defaultValues().get()
     )));
     when(uiService.loadFxml("theme/achievement_item.fxml")).thenReturn(achievementItemController);
-    when(achievementService.getPlayerAchievements(PLAYER_ID)).thenReturn(CompletableFuture.completedFuture(asList(
+    when(achievementService.getPlayerAchievements(player.getId())).thenReturn(CompletableFuture.completedFuture(asList(
         PlayerAchievementBuilder.create().defaultValues().achievementId("foo-bar").state(AchievementState.UNLOCKED).get(),
         PlayerAchievementBuilder.create().defaultValues().get()
     )));
-    when(eventService.getPlayerEvents(PLAYER_ID)).thenReturn(CompletableFuture.completedFuture(new HashMap<>()));
+    when(eventService.getPlayerEvents(player.getId())).thenReturn(CompletableFuture.completedFuture(new HashMap<>()));
 
-    instance.setPlayer(PlayerBuilder.create(PLAYER_NAME).id(PLAYER_ID).get());
+    instance.setPlayer(player);
+    WaitForAsyncUtils.waitForFxEvents();
 
+    assertTrue(instance.ratingsLabels.getText().contains(leaderboard.getTechnicalName()));
+    assertTrue(instance.ratingsValues.getText().contains("123"));
     verify(achievementService).getAchievementDefinitions();
-    verify(achievementService).getPlayerAchievements(PLAYER_ID);
-    verify(eventService).getPlayerEvents(PLAYER_ID);
+    verify(achievementService).getPlayerAchievements(player.getId());
+    verify(leaderboardService, times(2)).getLeaderboards();
+    verify(eventService).getPlayerEvents(player.getId());
 
-    assertThat(instance.mostRecentAchievementPane.isVisible(), is(true));
+    assertTrue(instance.mostRecentAchievementPane.isVisible());
   }
 
   @Test
-  public void testOnRatingTypeChangeGlobal() throws Exception {
+  public void testOnRatingTypeChange() {
     testSetPlayerInfoBean();
-    instance.ratingTypeComboBox.setValue(RatingMode.GLOBAL);
+    instance.ratingTypeComboBox.setValue(leaderboard);
     instance.onRatingTypeChange();
-    verify(statisticsService, times(2)).getRatingHistory(KnownFeaturedMod.FAF, PLAYER_ID);
-  }
-
-  @Test
-  public void testOnRatingTypeChange1v1() throws Exception {
-    testSetPlayerInfoBean();
-    instance.ratingTypeComboBox.setValue(RatingMode.LADDER_1V1);
-    instance.onRatingTypeChange();
-    verify(statisticsService).getRatingHistory(KnownFeaturedMod.LADDER_1V1, PLAYER_ID);
+    verify(statisticsService, times(2)).getRatingHistory(player.getId(), leaderboard);
   }
 }
